<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tema1ej.tema1ej.DivisasConversorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtDolares"
            android:layout_width="@dimen/edtADiv"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/txvDolaresADiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvDolaresADiv" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtEuros"
            android:layout_width="@dimen/edtADiv"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/txvEurosADiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvEurosADiv" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rdbDolarAEuroADiv">

        <RadioButton
            android:id="@+id/rdbDolarAEuroADiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbDolarAEuroADiv" />

        <RadioButton
            android:id="@+id/rdbEuroADolarADiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbEuroADolarADiv" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvertirADiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvertirADiv" />
</LinearLayout>
